# vault-loader

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  config.example.yaml  pubkeys-test.json
.github/: renovate.json
.github/workflows/: release.yml  tag.yml  test.yml
src/: cli.rs  config.rs  config_tests.rs  keystores.rs  keystores_tests.rs  main.rs
